--- a/.github/workflows/phpstan.yaml
+++ b/.github/workflows/phpstan.yaml
@@ -5,12 +5,10 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v3
-        with:
-          path: app/
 
       - uses: php-actions/composer@v6
         with:
-          path: app/
+          working_dir: app/
 
       - name: PHPStan Static Analysis
         uses: php-actions/phpstan@v3
