--- a/app/composer.json
+++ b/app/composer.json
@@ -5,7 +5,10 @@
     },
     "autoload": {
         "psr-4": {
-            "Root\\App\\": "/"
+            "Src\\": "src/"
         }
+    },
+    "require-dev": {
+        "phpunit/phpunit": "^10"
     }
 }
