--- a/.github/workflows/phpunit.yaml
+++ b/.github/workflows/phpunit.yaml
@@ -1,7 +1,7 @@
 name: PHPUNIT
 on: push
 jobs:
-  phpstan:
+  phpunit:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v3
@@ -13,4 +13,5 @@ jobs:
       - name: PHPUnit
         uses: php-actions/phpunit@v3
         with:
+          bootstrap: app/vendor/autoload.php
           configuration: app/phpunit.xml
